--- a/src/shop.html
+++ b/src/shop.html
@@ -151,10 +151,10 @@
             <h1>Featured Retailers</h1>
             <div class="treeBanners">
 		 <div class="col-3">
-                    <a>  <img src="./images/TOMS.png"></a>
+                    <a href="https://tomsaustralia.com.au/">  <img src="./images/TOMS.png"></a>
                 </div>
                 <div class="col-3">
-                    <a>  <img src="./images/Timbuk2.png"></a>
+                    <a href="https://timbuk2.com.au/">  <img src="./images/Timbuk2.png"></a>
                 </div>
                 <div class="col-3">
                     <a href="bunnings"><img src="./images/Bunnings Reg.png"></a>
