Bunnigs removal of comp

--- a/src/bunnings.html
+++ b/src/bunnings.html
@@ -228,7 +228,7 @@ And now you can use Openpay for anything you need at Bunnings. Whether its a hot
 
 
 
-<div class="howItWorks">
+<!--<div class="howItWorks">
         <div class="bodyContainer">
             <div class="twoPanes">
             <div class="col-2">
@@ -248,7 +248,7 @@ Simply use Openpay at Bunnings to go into the weekly draw!</p>
             <div class="clear"></div>
         </div>
         </div>
-    </div>
+    </div>-->
 
 
 
