Add missed closing </div>

--- a/src/shop.html
+++ b/src/shop.html
@@ -150,7 +150,7 @@
         <div class="bodyContainer">
             <h1>Featured Retailers</h1>
             <div class="treeBanners">
-		 <div class="col-3">
+		        <div class="col-3">
                     <a href="https://tomsaustralia.com.au/">  <img src="./images/TOMS.png"></a>
                 </div>
                 <div class="col-3">
@@ -159,6 +159,7 @@
                 <div class="col-3">
                     <a href="bunnings"><img src="./images/Bunnings Reg.png"></a>
                 </div>
+            </div>
             <div class="clear"></div>
         </div>
     </div>
