--- a/src/business.html
+++ b/src/business.html
@@ -85,10 +85,10 @@
                     <a href="register">Register your interest</a>
 
                 </div>
-                    <!-- <div class="btnBoxContact">
+                   <div class="btnBoxContact">
                     <a href="http://unbouncepages.com/openpaycontact/">Contact us</a>
 
-                </div> -->
+                </div> 
             </div>
         </div>
     </div>
