--- a/src/business.html
+++ b/src/business.html
@@ -196,6 +196,8 @@
     <div class="everywereYourCostumers greyPane">
         <div class="bodyContainer">
             <div class="col-2">
+                                <div class="margin"></div>
+
                 <h1>Everywhere your customers are.</h1>
                 <p>Increase your ATV instore with the Openpay app and online with the Openpay hosted checkout. Market to them through our marketing. EDM's and app notifications</p>
             </div>
@@ -243,6 +245,40 @@
             </div>
         </div>
     </div>
+
+
+   <div class="everywereYourCostumers ">
+        <div class="bodyContainer">
+            <div class="col-2">
+                <div class="margin"></div>
+                <h1>Download our latest assets and marketing resources.</h1>
+                <p>Make sure we're both shining</p>
+                 <div class="btnBox">
+                <a href="https://brand.openpay.com.au">Visit merchant resources</a>
+            </div>
+            </div>
+            <div class="col-2">
+                <img src="images/brandGuide.png"/>
+            </div>
+            <div class="clear"></div>
+        </div>
+    </div>
+
+
+<!-- <div class="readyRegister ">
+        <div class="bodyContainer">
+            <h1>Download our latest assets and marketing resources.</h1>
+            <p>Make sure we're both shining</p>
+
+            <div class="btnBox">
+                <a href="https://brand.openpay.com.au">Visit merchant resources</a>
+            </div>
+        </div>
+    </div> -->
+
+
+
+
     <div class="footer">
         <div class="footerMenu">
             <a href="shop" class="footerNav">Shop now</a>
@@ -250,6 +286,8 @@
             <a href="business" class="footerNav">I'm a business</a>
             <a href="help" class="footerNav">Help & contact</a>
             <a href="legal" class="footerNav">Legal stuff</a>
+            <a href="https://brand.openpay.com.au" class="footerNav">Merchant resources</a>
+
         </div>
         <div class="socialLinks">
 				<span>
