--- a/src/business.html
+++ b/src/business.html
@@ -85,10 +85,10 @@
                     <a href="register">Register now</a>
 
                 </div>
-                   <div class="btnBoxContact">
+                   <!-- <div class="btnBoxContact">
                     <a href="http://unbouncepages.com/openpaycontact/">Contact us</a>
 
-                </div> 
+                </div>  -->
             </div>
         </div>
     </div>
@@ -251,8 +251,8 @@
         <div class="bodyContainer">
             <div class="col-2">
                 <div class="margin"></div>
-                <h1>Download our latest assets and marketing resources.</h1>
-                <p>Make sure we're both shining</p>
+                <h1>Access Openpay assets and marketing resources</h1>
+                <p>Make sure we’re both shining online, in store and everywhere</p>
                  <div class="btnBox">
                 <a href="https://brand.openpay.com.au">Visit merchant resources</a>
             </div>
