--- a/src/shop-brand.html
+++ b/src/shop-brand.html
@@ -162,10 +162,11 @@
 <div class="footer">
     <div class="footerMenu">
         <a href="shop" class="footerNav">Shop now</a>
-        <a href="how" class="footerNav">how it works</a>
+        <a href="how" class="footerNav">How it works</a>
         <a href="business" class="footerNav">I'm a business</a>
         <a href="help" class="footerNav">Help & contact</a>
         <a href="legal" class="footerNav">Legal stuff</a>
+        <a href="https://brand.openpay.com.au" class="footerNav">Merchant resources</a>
     </div>
     <div class="socialLinks">
 				<span>
