--- a/src/au-terms-giftcards.html
+++ b/src/au-terms-giftcards.html
@@ -196,6 +196,7 @@ be paid at checkout will be 20% of the full purchase price. </span></p>
                 <a href="business" class="footerNav">I'm a business</a>
                 <a href="help" class="footerNav">Help & contact</a>
                 <a href="legal" class="footerNav">Legal stuff</a>
+                <a href="https://brand.openpay.com.au" class="footerNav">Merchant resources</a>
             </div>
             <div class="socialLinks">
 				<span>
