Comment out merchant resource links - not for release

--- a/src/bunnings.html
+++ b/src/bunnings.html
@@ -298,7 +298,7 @@ Use Openpay at Bunnings to get the kitchen you really want. You can split the co
             <a href="business" class="footerNav">I'm a business</a>
             <a href="help" class="footerNav">Help & contact</a>
             <a href="legal" class="footerNav">Legal stuff</a>
-            <a href="https://brand.openpay.com.au" class="footerNav">Merchant resources</a>
+            <!-- <a href="https://brand.openpay.com.au" class="footerNav">Merchant resources</a> -->
         </div>
         <div class="socialLinks">
 				<span>
