--- a/src/au-terms-bunningsgiveaway.html
+++ b/src/au-terms-bunningsgiveaway.html
@@ -661,7 +661,7 @@ lang=EN-US>&nbsp;</span></p>
                 <a href="business" class="footerNav">I'm a business</a>
                 <a href="help" class="footerNav">Help & contact</a>
                 <a href="legal" class="footerNav">Legal stuff</a>
-                <a href="https://brand.openpay.com.au" class="footerNav">Merchant resources</a>
+                <!-- <a href="https://brand.openpay.com.au" class="footerNav">Merchant resources</a> -->
             </div>
             <div class="socialLinks">
 				<span>
