--- a/src/business.html
+++ b/src/business.html
@@ -247,7 +247,7 @@
     </div>
 
 
-   <div class="everywereYourCostumers ">
+   <!-- <div class="everywereYourCostumers ">
         <div class="bodyContainer">
             <div class="col-2">
                 <div class="margin"></div>
@@ -262,7 +262,7 @@
             </div>
             <div class="clear"></div>
         </div>
-    </div>
+    </div> -->
 
 
 <!-- <div class="readyRegister ">
@@ -286,7 +286,7 @@
             <a href="business" class="footerNav">I'm a business</a>
             <a href="help" class="footerNav">Help & contact</a>
             <a href="legal" class="footerNav">Legal stuff</a>
-            <a href="https://brand.openpay.com.au" class="footerNav">Merchant resources</a>
+            <!-- <a href="https://brand.openpay.com.au" class="footerNav">Merchant resources</a> -->
 
         </div>
         <div class="socialLinks">
