--- a/src/shop-brand.html
+++ b/src/shop-brand.html
@@ -166,7 +166,7 @@
         <a href="business" class="footerNav">I'm a business</a>
         <a href="help" class="footerNav">Help & contact</a>
         <a href="legal" class="footerNav">Legal stuff</a>
-        <a href="https://brand.openpay.com.au" class="footerNav">Merchant resources</a>
+        <!-- <a href="https://brand.openpay.com.au" class="footerNav">Merchant resources</a> -->
     </div>
     <div class="socialLinks">
 				<span>
