--- a/src/business.html
+++ b/src/business.html
@@ -247,7 +247,7 @@
     </div>
 
 
-   <!-- <div class="everywereYourCostumers ">
+   <div class="everywereYourCostumers ">
         <div class="bodyContainer">
             <div class="col-2">
                 <div class="margin"></div>
@@ -262,7 +262,7 @@
             </div>
             <div class="clear"></div>
         </div>
-    </div> -->
+    </div>
 
 
 <!-- <div class="readyRegister ">
