remove shop possibility

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,6 @@
     <div class="mainContent">
 		<div class="topNav">
 			<a class="mainLogo" href="index"></a>
-			<a href="shop">Shop now</a>
 			<a href="how">How it works</a>
 			<a href="business">I'm a business</a>
 			<a href="help">Help & contact</a>
@@ -59,7 +58,6 @@
 				<span></span>
 				<span></span>
 				<ul>
-					<a href="shop"><li>Shop now</li></a>
 					<a href="how"><li>How it works</li></a>
 					<a href="business"><li>I'm a business</li></a>
 					<a href="help"><li>Help & contact</li></a>
@@ -76,26 +74,7 @@
 				<div class="typeBox">
 					<h1 id='rotating-words' class="txt-rotate" data-period="2000" data-rotate='[ "car services", "glasses","new tyres","dog beds","fresh sheets","physio","bed","cat toys","blender","tents","trampoline","vet bills","new dress","sofa","vacuum","sneakers","toaster","camping gear","activewear", "window tinting","pots and pans","waffle maker" ]'></h1>
 				</div>
-				<div class="btnBox"><a href="shop">Shop all stores</a></div>
 			</div>
-		</div>
-		<div class="promotions">
-			<h1>News & promotions</h1>
-			<div class="treeBanners">
-				<div class="col-3">
-					<a href="https://tomsaustralia.com.au/">  <img src="./images/TOMS.png"></a>
-				</div>
-				<div class="col-3">
-					<a href="https://timbuk2.com.au/">  <img src="./images/Timbuk2.png"></a>
-				</div>
-				<div class="col-3">
-					<a href="bunnings"><img src="./images/Bunnings Reg.png"></a>
-				</div>
-				<!--<div class="col-3">
-					<a href="https://www.lincraft.com.au/"><img src="./images/feature-lincraft.png"></a>
-				</div>-->
-			</div>
-			<div class="clear"></div>
 		</div>
 		<div class="takeControl">
 			<h1>Take control of how you pay</h1>
@@ -136,57 +115,6 @@
 			</div>
 			<div class="clear"></div>
 		</div>
-		<div class="whereCanShop byCategory">
-			<h1>Where can I shop?</h1>
-			<div class="fourBanners">
-				<div class="col-4">
-					<div class="marketToProvide cat-1" data-value="209002">
-						<h3>Health & wellbeing</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide cat-2" data-value="209003">
-						<h3>Fashion</h3>
-					</div>
-				</div>
-				<!-- <div class="col-4">
-					<div class="marketToProvide cat-3" data-value="209004">
-						<h3>Lifestyle</h3>
-					</div>
-				</div> -->
-				<div class="col-4">
-					<div class="marketToProvide cat-4" data-value="209007">
-						<h3>Beauty</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide cat-5" data-value="209008">
-						<h3>Trades & services</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide cat-6" data-value="209001">
-						<h3>Automotive</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide cat-7" data-value="209005">
-						<h3>Home & garden</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide cat-8" data-value="209006">
-						<h3>Dental</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide cat-9" data-value="209009">
-						<h3>Sports &amp; Outdoors</h3>
-					</div>
-				</div>
-				<div class="clear"></div>
-			</div>
-		</div>
 		<div class="downloadApp">
 			<a name="download"></a>
 			<h1>Download the Openpay app</h1>
@@ -212,7 +140,6 @@
 		<!-- <div class="noInstagram"></div> -->
 		<div class="footer">
 			<div class="footerMenu">
-				<a href="shop" class="footerNav">Shop now</a>
 				<a href="how" class="footerNav">How it works</a>
 				<a href="business" class="footerNav">I'm a business</a>
 				<a href="help" class="footerNav">Help & contact</a>
@@ -241,14 +168,14 @@
 					</a>
 				</span>
 			</div>
-			<div class="footerAppWrapper">
-				<a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', 'Footer');">
-					<img class="apple" src="./images/apple.svg">
-				</a>
-				<a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Footer');">
-					<img class="android" src="./images/android.svg">
-				</a>
-			</div>
+			<!--<div class="footerAppWrapper">-->
+				<!--<a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', 'Footer');">-->
+					<!--<img class="apple" src="./images/apple.svg">-->
+				<!--</a>-->
+				<!--<a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Footer');">-->
+					<!--<img class="android" src="./images/android.svg">-->
+				<!--</a>-->
+			<!--</div>-->
             <div class="footerMoreLinksMenu">
                 <a href="legal" class="footerNav">Privacy</a>
                 <a href="legal" class="footerNav">Terms & Conditions</a>
