--- a/src/au-terms-bunningsgiveaway.html
+++ b/src/au-terms-bunningsgiveaway.html
@@ -40,7 +40,6 @@
 <body>
     <div class="topNav">
         <a class="mainLogo" href="index"></a>
-        <a href="shop">Shop now</a>
         <a href="how">How it works</a>
         <a href="business">I'm a business</a>
         <a href="help">Help & contact</a>
@@ -656,7 +655,6 @@ lang=EN-US>&nbsp;</span></p>
         </div>
         <div class="footer">
             <div class="footerMenu">
-                <a href="shop" class="footerNav">Shop now</a>
                 <a href="how" class="footerNav">How it works</a>
                 <a href="business" class="footerNav">I'm a business</a>
                 <a href="help" class="footerNav">Help & contact</a>
@@ -685,14 +683,14 @@ lang=EN-US>&nbsp;</span></p>
 					</a>
 				</span>
             </div>
-            <div class="footerAppWrapper">
-                <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', 'Footer');">
-                    <img class="apple" src="./images/apple.svg">
-                </a>
-                <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Footer');">
-                    <img class="android" src="./images/android.svg">
-                </a>
-            </div>
+            <!--<div class="footerAppWrapper">-->
+                <!--<a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', 'Footer');">-->
+                    <!--<img class="apple" src="./images/apple.svg">-->
+                <!--</a>-->
+                <!--<a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Footer');">-->
+                    <!--<img class="android" src="./images/android.svg">-->
+                <!--</a>-->
+            <!--</div>-->
             <div class="footerMoreLinksMenu">
                 <a href="legal" class="footerNav">Privacy</a>
                 <a href="legal" class="footerNav">Terms & Conditions</a>
