--- a/src/how.html
+++ b/src/how.html
@@ -39,7 +39,6 @@
 <body>
 <div class="topNav">
     <a class="mainLogo" href="index"></a>
-    <a href="shop">Shop now</a>
     <a class="active" href="how">How it works</a>
     <a href="business">I'm a business</a>
     <a href="help">Help & contact</a>
@@ -155,26 +154,8 @@
         </div>
         </div>
     </div>
-    <div class="promotions">
-        <div class="bodyContainer">
-            <h1>Featured Retailers</h1>
-            <div class="treeBanners">
-		<div class="col-3">
-                    <a href="https://tomsaustralia.com.au/">  <img src="./images/TOMS.png"></a>
-                </div>
-                <div class="col-3">
-                    <a href="https://timbuk2.com.au/">  <img src="./images/Timbuk2.png"></a>
-                </div>
-                <div class="col-3">
-                    <a href="bunnings"><img src="./images/Bunnings Reg.png"></a>
-                </div>
-            </div>
-            <div class="clear"></div>
-        </div>
-    </div>
     <div class="footer">
         <div class="footerMenu">
-            <a href="shop" class="footerNav">Shop now</a>
             <a href="how" class="footerNav">How it works</a>
             <a href="business" class="footerNav">I'm a business</a>
             <a href="help" class="footerNav">Help & contact</a>
@@ -203,14 +184,14 @@
 					</a>
 				</span>
         </div>
-        <div class="footerAppWrapper">
-            <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', 'Footer');">
-                <img class="apple" src="./images/apple.svg">
-            </a>
-            <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Footer');">
-                <img class="android" src="./images/android.svg">
-            </a>
-        </div>
+        <!--<div class="footerAppWrapper">-->
+            <!--<a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', 'Footer');">-->
+                <!--<img class="apple" src="./images/apple.svg">-->
+            <!--</a>-->
+            <!--<a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Footer');">-->
+                <!--<img class="android" src="./images/android.svg">-->
+            <!--</a>-->
+        <!--</div>-->
         <div class="footerMoreLinksMenu">
             <a href="legal" class="footerNav">Privacy</a>
             <a href="legal" class="footerNav">Terms & Conditions</a>
