--- a/src/legal.html
+++ b/src/legal.html
@@ -43,7 +43,7 @@
     <a href="business">I'm a business</a>
     <a href="help">Help & contact</a>
     <div class="topNavRight">
-        <a href="https://retailer.myopenpay.com.au/live/Account/Login/" onclick="ga('send', 'event', 'Outbound', 'Merchant Log in');">Merchant log in</a>
+        <!--<a href="https://retailer.myopenpay.com.au/live/Account/Login/" onclick="ga('send', 'event', 'Outbound', 'Merchant Log in');">Merchant log in</a>-->
     </div>
 </div>
 <!--hamburger menu-->
@@ -60,7 +60,7 @@
             <a href="business"><li>I'm a business</li></a>
             <a href="help"><li>Help & contact</li></a>
             <br>
-            <a href="https://retailer.myopenpay.com.au/live/Account/Login/"><li>Merchant log in</li></a>
+            <!--<a href="https://retailer.myopenpay.com.au/live/Account/Login/"><li>Merchant log in</li></a>-->
 
         </ul>
     </div>
