--- a/src/help.html
+++ b/src/help.html
@@ -78,7 +78,7 @@
     <div class="contactUs">
         <div class="bodyContainer">
             <a name="contact"></a>
-            <h1>Ways to contact us</h1>
+            <h1>Contact us</h1>
             <a name="contact"></a>
             <p>We're available Monday to Friday 9am to 5pm AEST</p>
             <div class="contactUsColContainer">
