--- a/src/index.html
+++ b/src/index.html
@@ -115,22 +115,73 @@
 			</div>
 			<div class="clear"></div>
 		</div>
-		<div class="downloadApp">
-			<a name="download"></a>
-			<h1>Download the Openpay app</h1>
-			<p>
-				Browse for shops and services, manage your payment schedule and
-				get exclusive offers from your favorite brands.
-			</p>
-			<div class="downloadAppWrapper">
-				<a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', 'Home');">
-					<img class="apple" src="./images/apple.svg">
-				</a>
-				<a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Home');">
-					<img class="android" src="./images/android.svg">
-				</a>
+		<div class="whereCanShop byCategory">
+			<h1>Сoming soon</h1>
+			<div class="fourBanners">
+				<div class="col-4">
+					<div class="marketToProvide cat-1" data-value="209002">
+						<h3>Health & wellbeing</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide cat-2" data-value="209003">
+						<h3>Fashion</h3>
+					</div>
+				</div>
+				<!-- <div class="col-4">
+					<div class="marketToProvide cat-3" data-value="209004">
+						<h3>Lifestyle</h3>
+					</div>
+				</div> -->
+				<div class="col-4">
+					<div class="marketToProvide cat-4" data-value="209007">
+						<h3>Beauty</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide cat-5" data-value="209008">
+						<h3>Trades & services</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide cat-6" data-value="209001">
+						<h3>Automotive</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide cat-7" data-value="209005">
+						<h3>Home & garden</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide cat-8" data-value="209006">
+						<h3>Dental</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide cat-9" data-value="209009">
+						<h3>Sports &amp; Outdoors</h3>
+					</div>
+				</div>
+				<div class="clear"></div>
 			</div>
 		</div>
+		<!--<div class="downloadApp">-->
+			<!--<a name="download"></a>-->
+			<!--<h1>Download the Openpay app</h1>-->
+			<!--<p>-->
+				<!--Browse for shops and services, manage your payment schedule and-->
+				<!--get exclusive offers from your favorite brands.-->
+			<!--</p>-->
+			<!--<div class="downloadAppWrapper">-->
+				<!--<a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', 'Home');">-->
+					<!--<img class="apple" src="./images/apple.svg">-->
+				<!--</a>-->
+				<!--<a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Home');">-->
+					<!--<img class="android" src="./images/android.svg">-->
+				<!--</a>-->
+			<!--</div>-->
+		<!--</div>-->
 		<div class="instagram">
 			<h1>Join us on Instagram</h1>
 			<div class="instagramWrapper">
