--- a/src/australian-terms-conditions.html
+++ b/src/australian-terms-conditions.html
@@ -5,14 +5,12 @@
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AU Terms & Conditions</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-84225706-1');
-    </script>
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+				new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-TF3JKHF');</script>
 
     <!-- 	FullStory Snippet -->
     <script>
@@ -163,18 +161,18 @@
 					<p>10.1. You acknowledge that if you default under these terms and conditions and remain in arrears for a period of more than 14 days, Openpay will provide written notification to the warranty provider of this default. You acknowledge that in this circumstance, your warranty will be cancelled from the date on which this written notification is provided.<br />
 					10.2. You acknowledge that the warranty provider will not transfer any warranty financed by Openpay where there is an Outstanding Balance under the relevant Openpay Plan.</p>
 					<p>&nbsp;</p>
-                </div>	
+                </div>
 				<div class="subSection">
                     <h3>11. Special Terms and Conditions for financing of goods requiring installation at your residential property, or marketing costs associated with selling a residential property.</h3>
                     <p>11.1. You agree that by taking out the Openpay Plan you are the registered proprietor of the property being marketed or at which the financed goods are being installed.<br />
 					11.2. You acknowledge that any Outstanding Balances must be paid, prior to selling such property.</p>
 					<p>&nbsp;</p>
-                </div>	
+                </div>
 				<div class="subSection">
                     <h3>12. Relationship between Openpay and the Participating Merchant</h3>
                     <p>You acknowledge that a Participating Merchant may pay us a fee in respect of each Openpay Plan used to finance the purchase of goods or services from the Participating Merchant.</p>
 					<p>&nbsp;</p>
-                </div>	
+                </div>
 				<div class="subSection">
                     <h3>13. Interpretation</h3>
                     <p>Capitalised words and phrases have the meaning given to them in the Openpay Plan) or in these terms and conditions including this clause 13. The following words and phrases have the following meanings:<br />
@@ -189,7 +187,7 @@
 					13.11. <em>Term</em> means, in relation to an Openpay Plan, the period specified in the Openpay Plan terms and conditions.</p>
 					<p>13.12. These Terms and Conditions will be governed by the law for the time being in force in Victoria, and you agree to submit to the non-exclusive jurisdiction of the Courts in that State.</p>
 					<p>&nbsp;</p>
-                </div>	
+                </div>
 				<div class="subSection">
                     <h3>14. Fees</h3>
                     <p>14.1 The fees payable under this credit contract are those set out in this clause and those disclosed to you before you enter into an Openpay Plan during the Openpay Checkout Process.</p>
@@ -210,7 +208,7 @@
 					We may disclose your personal information to our related entities, service providers and agents located overseas, including in the UK, USA, Israel, the Philippines and Hong Kong.<br />
 					Openpay’s Privacy Policy, available at http://www.openpay.com.au/privacy-policy/ , sets out how we manage the personal information we hold (including information about your credit) and how you can seek access to, or the correction of, the information we hold about you. It also sets out how you may complain about our information handling practices and how we deal with such complaints.</p>
 					<p>&nbsp;</p>
-                </div>	
+                </div>
 				<div class="subSection">
                     <h3>16. Varying these Terms and Conditions</h3>
 					<p>These Terms and Conditions may be varied by us from time to time, provided any changes which materially affect your rights or obligations are made by giving you no less than 14 days’ written notice. If you do not wish to agree to any variation (if any), you will be entitled to terminate this credit contract in accordance with clause 9.</p>
@@ -283,7 +281,10 @@
 
 	</div>
 </div>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TF3JKHF"
+				  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
