--- a/src/au-terms-giftcards.html
+++ b/src/au-terms-giftcards.html
@@ -6,14 +6,12 @@
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIft Cards Terms & Conditions</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-84225706-1');
-    </script>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TF3JKHF');</script>
     <!--    FullStory Snippet -->
     <script>
         window['_fs_debug'] = false;
@@ -69,7 +67,7 @@
         <div class="helpContent greyPane">
             <div class="bodyContainer">
                 <div class="section">
-                  
+
                     <article class="generic-copy">
                         <div class="typography">
 <div class=WordSection1>
@@ -239,6 +237,10 @@ be paid at checkout will be 20% of the full purchase price. </span></p>
 
         </div>
     </div>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TF3JKHF"
+                      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 
