--- a/src/business.html
+++ b/src/business.html
@@ -5,14 +5,12 @@
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Openpay: I'm a business - Enable new audiences</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-84225706-1');
-    </script>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TF3JKHF');</script>
 
     <!-- 	FullStory Snippet -->
     <script>
@@ -72,7 +70,7 @@
             <div class="heroInfo">
                 <h1>Generate new customers. Increase sales.</h1>
                 <p>
-                    Let existing and new customers choose how they want to pay 
+                    Let existing and new customers choose how they want to pay
                 </p>
                 <div style="margin-right: 5px;" class="btnBox">
 
@@ -330,7 +328,10 @@
 
     </div>
 </div>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TF3JKHF"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
