add page home uk

--- a/src/business.html
+++ b/src/business.html
@@ -31,7 +31,7 @@
         })(window,document,window['_fs_namespace'],'script','user');
     </script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
-    <link rel="stylesheet" href="./css/bussines.css" />
+    <link rel="stylesheet" href="./css/business.css" />
     <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
@@ -63,150 +63,217 @@
         </ul>
     </div>
 </nav>
+<div class="mainContent">
+    <div class="heroBusinessContainer">
+        <div class="greyWithOpacity"></div>
+        <div class="bodyContainer">
+            <div class="heroInfo">
+                <h1>Generate new customers. Increase sales.</h1>
+                <p>
+                    Let existing and new customers choose how they want to pay
+                </p>
+                <div style="margin-right: 5px;" class="btnBox">
 
-<div class="welcome-wrap block-wap">
-    <div class="welcome block-child-wrap">
-        <img src="./images/logoNew1.svg" alt="Openpay" class="logo">
-        <p class="welcome-subtitle paragraph-1">
-            Welcome to a smarter way to pay
-        </p>
-    </div>
-</div>
-<div class="partnered-wrap block-wap">
-    <div class="partnered block-child-wrap">
-        <p class="paragraph-2 partnered__paragraph">
-            We’ve partnered with Openpay
-            to bring you more ways to pay,
-            on your terms.
-        </p>
-        <button class="btn-primary partnered_btn">
-            Sign up now
-        </button>
-    </div>
-</div>
-<div class="works-wrap block-wap">
-    <div class="works block-child-wrap">
-        <h2 class="title-h2 works-title">
-            How Openpay works
-        </h2>
-        <div class="work-list">
-            <div class="work-item">
-                <img src="./images/Path%204496.svg" alt="sign in"
-                     class="work-item__icon work-item__icon_1">
-                <h3 class="work-item__title title-h3">
-                    Sign Up
-                </h3>
-                <p class="work-item__desc paragraph-3">
-                    Get approved in
-                    less than 60 seconds
-                    with a few simple
-                    details.
-                </p>
-            </div>
-            <div class="work-item">
-                <img src="./images/Path%204497.svg" alt="shop"
-                     class="work-item__icon work-item__icon_2">
-                <h3 class="work-item__title title-h3">
-                    Shop
-                </h3>
-                <p class="work-item__desc paragraph-3">
-                    With any of our
-                    trusted retailer
-                    partners online
-                    and in-store.
-                </p>
-            </div>
-            <div class="work-item">
-                <img src="./images/Group%201428.svg" alt="simple"
-                     class="work-item__icon work-item__icon_3">
-                <h3 class="work-item__title title-h3">
-                    Simple
-                </h3>
-                <p class="work-item__desc paragraph-3">
-                    Pay your plan
-                    off in equal,
-                    monthly instalments,
-                    starting today.
-                </p>
+
+                    <!--<a href="mailto:info@openpay.com.au?subject=Website Merchant Enquiry&body=-->
+                    <!--Hi%20Openpay,%0d%0dI'd%20like%20to%20know%20more%20about%20providing%20Openpay%20to%20our%20customers. %0d%0dHere%20are%20my%20details: %0d%0dBusiness%20Name:%20%20%0dBusiness%20Trading%20Names:%20%20%0dContact%20Name:%20%20%0dContact%20Number:%20%20%0dContact%20e-mail:%20%20%0dContact%20Position:%20%20%0dIndustry:%20%20%0dEntity%20Ownership%20Structure:%20%20%0dFranchisee:%20%20%0dFranchise%20Group%20Name:%20%20%0dDo%20you%20have%20a%20Parent%20Company:%20%20%0dParent%20Company%20Name:%20%20%0dAre%20you%20part%20of%20an%20Industry%20Group%20or%20Association?:%20%20%0dIndustry%20Group%20or%20Association%20Name:%20%20%0dStreet:%20%20%20%0dSuburb:%20%20%0dZip/Post%20Code:%20%20%0dState:%20%20%0dCountry:%20%20%0dNumber%20of%20Locations:%20%20%0dDate%20entity%20started%20trading:%20%20%0dSales%20Channels:%20%20%0dAnnual%20Turnover:%20%20%0dAverage%20Transaction%20Value:%20%20%0dNotes%20–%20Additional%20Information:%20%20%0dTerms%20and%20Conditions%20Agreed:%20%20%0dABN:%20%20%0dACN:%20%20%0dProduct%20Liability%20Insurance:%20%20%0dProfessional%20Indemnity%20Insurance:%20%20%0dProfessional%20Liability%20Insurance:%20%20%0dMinimum%20Transaction%20Value:%20%20%0dMaximum%20Transaction%20Value:%20%20%0d%0dFull%20name%20(s):%20%20%0dDate%20of%20Birth:%20%20%0dDriver’s%20License%20number:%20%20%0dTrust%20Deed:%20%20-->
+
+                    <!--">Register your interest</a>-->
+                    <a href="register">Register now</a>
+
+                </div>
+                   <!-- <div class="btnBoxContact">
+                    <a href="http://unbouncepages.com/openpaycontact/">Contact us</a>
+
+                </div>  -->
             </div>
         </div>
     </div>
-</div>
-<div class="empoweringPay-wrap block-wap">
-    <div class="empoweringPay block-child-wrap">
-        <section class="empoweringPay-section">
-            <h2 class="title-h2 empoweringPay-title">
-                Empowering you to pay.
-            </h2>
-            <article class="empoweringPay__article">
-                <h4 class="title-h4 empoweringPay__article-title">
-                    When will my next payment be due?
-                </h4>
-                <p class="paragraph-4">
-                    After your initial instalment
-                    today, your next payment will
-                    be due in 28 days. Don’t forget,
-                    you can customise this to suit
-                    your schedule.
+    <div class="whyUseOpenpay greyPane">
+        <h1>Why use Openpay</h1>
+        <div class="bodyContainer">
+            <div class="fourPanes">
+            <div class="col-4">
+                <div class="whyUseOpenpayIcon chart"></div>
+                <h2>
+                    Increase ATV (average transaction value) & conversion
+                </h2>
+                <p>
+                    Consumers are more comfortable spending more when they have more time to pay and no scary interest.
                 </p>
-            </article>
-            <article class="empoweringPay__article">
-                <h4 class="title-h4 empoweringPay__article-title">
-                    Is Openpay safe & secure?
-                </h4>
-                <p class="paragraph-4">
-                    Yes, protecting your information
-                    is very important to us. Openpay
-                    is a Level 1 PCI DSS Compliant
-                    Provider. This means that all
-                    sensitive information is encrypted
-                    and we maintain stringent physical,
-                    electronic and procedural safeguards
-                    to protect your information. View the
-                    Openpay privacy policy
-                    <a href="#" class="link-to"><ins>here</ins></a>.
+            </div>
+            <div class="col-4">
+                <div class="whyUseOpenpayIcon customers"></div>
+                <h2>
+                    Gain new customers
+                </h2>
+                <p>
+                    Our extensive database delivers cross sell opportunities and customers who prefer using Openpay
                 </p>
-            </article>
-            <article class="empoweringPay__article">
-                <h4 class="title-h4 empoweringPay__article-title">
-                    Will I be charged interest?
-                </h4>
-                <p class="paragraph-4">
-                    Openpay does not charge any interest. Ever.
+            </div>
+            <div class="col-4">
+                <div class="whyUseOpenpayIcon risk"></div>
+                <h2>
+                    Zero Risk
+                </h2>
+                <p>
+                    We pay you the next business day in full, less our fee.
                 </p>
-            </article>
-            <article class="empoweringPay__article">
-                <h4 class="title-h4 empoweringPay__article-title">
-                    Are there fees?
-                </h4>
-                <p class="paragraph-4">
-                    There are no establishment or
-                    payment fees. If you miss a
-                    payment, a late fee of £7.50
-                    will apply. To avoid this,
-                    contact Openpay to reschedule
-                    your payment date.
+            </div>
+            <div class="col-4">
+                <div class="whyUseOpenpayIcon lock"></div>
+                <h2>
+                    Secure
+                </h2>
+                <p>
+                    PCI Data Security compliant as a Level 1 Service Provider.
                 </p>
-            </article>
-            <article class="empoweringPay__article">
-                <h4 class="title-h4 empoweringPay__article-title">
-                    What if I want to return my order?
-                </h4>
-                <p class="paragraph-4">
-                    All refunds will be processed
-                    through us as normal, and
-                    Openpay will cancel payments
-                    and refund what is owed. Read
-                    the full terms and conditions
-                    <a href="#" class="link-to"><ins>here</ins></a>.
-                </p>
-            </article>
-            <button class="btn-primary empoweringPay_btn">
-                Sign up now
-            </button>
-        </section>
+            </div>
+            <div class="clear"></div>
+        </div>
+        </div>
     </div>
-</div>
+    <div class="longerTerms">
+        <div class="bodyContainer">
+            <div class="twoPanes">
+            <div class="col-2 everyStepContent">
+                <h1>Longer terms. Higher ATV</h1>
+                <p>
+                    Bigger purchases just got a little less daunting. More time to pay means more manageable spending for your customers.
+                </p>
+            </div>
+            <div class="col-2">
+                <img src="./images/graph.svg">
+            </div>
+            <div class="clear"></div>
+        </div>
+        </div>
+    </div>
+    <div class="whyUseCircles greyPane">
+        <div class="bodyContainer">
+            <h1>Womens Fashion Case Study</h1>
+            <div class="bodyContainer">
+                <div class="fourPanes">
+                <div class="col-3">
+                    <div class="circle">
+                        +120% ATV Increase
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="circle">
+                        77% Repeat Cusomers
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="tellMeMoreBtn">
+                        <a class="button" href="docs/womens-casestudy.pdf">Tell me more</a>
+                    </div>
+                </div>
+                <div class="clear"></div>
+            </div>
+            </div>
+        </div>
+    </div>
+    <div class="trustedLeaders">
+        <div class="bodyContainer">
+            <div class="col-2">
+                <h1>Trusted by industry leaders</h1>
+                <p>We partner with some of the biggest brands in the country across a range of industries including home improvement, healthcare, retail, automotive and more.</p>
+            </div>
+            <div class="col-2">
+                <img src="images/leaders/leaders-TakingShape_AU_Logo.png" height="33" width="144"/>
+                <img src="images/leaders/leaders-NikeTP.png" height="44" width="119"/>
+                <img src="images/leaders/leaders-MySmilePlan.png" height="46" width="97"/>
+                <img src="images/leaders/leaders-house-logo-hd.png" height="33" width="127"/>
+                <img src="images/leaders/leaders-Edge-01.png" height="49" width="84"/>
+                <img src="images/leaders/leaders-AHG.png" height="73" width="131"/></div>
+            <div class="clear"></div>
+        </div>
+    </div>
+    <div class="everywereYourCostumers greyPane">
+        <div class="bodyContainer">
+            <div class="col-2">
+                                <div class="margin"></div>
+
+                <h1>Everywhere your customers are.</h1>
+                <p>Increase your ATV instore with the Openpay app and online with the Openpay hosted checkout. Market to them through our marketing. EDM's and app notifications</p>
+            </div>
+            <div class="col-2">
+                <img src="images/everywhere_image.svg"/>
+            </div>
+            <div class="clear"></div>
+        </div>
+    </div>
+    <div class="seamless">
+        <div class="bodyContainer">
+            <h1>Seamless integration with your store.</h1>
+            <p>Customers don't care what eCommerce software you use, but we do. We integrate with the industry's best platforms so you can enable a wider audience.</p>
+            <div class="icons">
+                <img src="images/eComm/CommerceVision.png"/>
+                <img src="images/eComm/DemandWare.png"/>
+                <img src="images/eComm/EPages.png"/>
+                <img src="images/eComm/Estar.png"/>
+
+                <img src="images/eComm/Magento.png"/>
+                <img src="images/eComm/Magento2.png"/>
+                <img src="images/eComm/Opencart.png"/>
+                <img src="images/eComm/Pronto.png"/>
+
+                <img src="images/eComm/Seams.png"/>
+                <img src="images/eComm/shopify.png"/>
+                <img src="images/eComm/ShopifyPLus.png"/>
+                <img src="images/eComm/WooCommerce.png"/>
+            </div>
+            <div class="clear"></div>
+        </div>
+    </div>
+    <div class="readyRegister greyPane">
+        <div class="bodyContainer">
+            <h1>Ready to increase sales with Openpay?</h1>
+            <p>Start selling more with no risk. Enquire now, we'll get back to you within 24 hours.</p>
+
+            <div class="btnBox">
+
+                <!--<a href="mailto:info@openpay.com.au?subject=Website Merchant Enquiry&body=-->
+<!--Hi%20Openpay,%0d%0dI'd%20like%20to%20know%20more%20about%20providing%20Openpay%20to%20our%20customers. %0d%0dHere%20are%20my%20details: %0d%0dBusiness%20Name:%20%20%0dBusiness%20Trading%20Names:%20%20%0dContact%20Name:%20%20%0dContact%20Number:%20%20%0dContact%20e-mail:%20%20%0dContact%20Position:%20%20%0dIndustry:%20%20%0dEntity%20Ownership%20Structure:%20%20%0dFranchisee:%20%20%0dFranchise%20Group%20Name:%20%20%0dDo%20you%20have%20a%20Parent%20Company:%20%20%0dParent%20Company%20Name:%20%20%0dAre%20you%20part%20of%20an%20Industry%20Group%20or%20Association?:%20%20%0dIndustry%20Group%20or%20Association%20Name:%20%20%0dStreet:%20%20%20%0dSuburb:%20%20%0dZip/Post%20Code:%20%20%0dState:%20%20%0dCountry:%20%20%0dNumber%20of%20Locations:%20%20%0dDate%20entity%20started%20trading:%20%20%0dSales%20Channels:%20%20%0dAnnual%20Turnover:%20%20%0dAverage%20Transaction%20Value:%20%20%0dNotes%20–%20Additional%20Information:%20%20%0dTerms%20and%20Conditions%20Agreed:%20%20%0dABN:%20%20%0dACN:%20%20%0dProduct%20Liability%20Insurance:%20%20%0dProfessional%20Indemnity%20Insurance:%20%20%0dProfessional%20Liability%20Insurance:%20%20%0dMinimum%20Transaction%20Value:%20%20%0dMaximum%20Transaction%20Value:%20%20%0d%0dFull%20name%20(s):%20%20%0dDate%20of%20Birth:%20%20%0dDriver’s%20License%20number:%20%20%0dTrust%20Deed:%20%20-->
+
+<!--">Register your interest</a>-->
+                <a href="register">Register your interest</a>
+            </div>
+        </div>
+    </div>
+
+
+   <div class="everywereYourCostumers ">
+        <div class="bodyContainer">
+            <div class="col-2">
+                <div class="margin"></div>
+                <h1>Access Openpay assets and marketing resources</h1>
+                <p>Make sure we’re both shining online, in store and everywhere</p>
+                 <div class="btnBox">
+                <a href="https://brand.openpay.com.au">Visit merchant resources</a>
+            </div>
+            </div>
+            <div class="col-2">
+                <img src="images/brandGuide.png"/>
+            </div>
+            <div class="clear"></div>
+        </div>
+    </div>
+
+
+<!-- <div class="readyRegister ">
+        <div class="bodyContainer">
+            <h1>Download our latest assets and marketing resources.</h1>
+            <p>Make sure we're both shining</p>
+
+            <div class="btnBox">
+                <a href="https://brand.openpay.com.au">Visit merchant resources</a>
+            </div>
+        </div>
+    </div> -->
+
+
 
 
     <div class="footer">
@@ -221,7 +288,7 @@
         <div class="socialLinks">
 				<span>
 					<a href="https://facebook.com/openpayau" class="footer-icon fb">
-						<img src="images/social/Fb.svg">
+						<img src="./images/social/Fb.svg">
 						Facebook
 					</a>
 					<a href="https://twitter.com/openpay_" class="footer-icon twit">
@@ -261,10 +328,7 @@
 
     </div>
 </div>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TF3JKHF"
-                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
